- The ch05.R script now includes the code for Figure 5.8.
- Datasets austres, fdeaths, lh, mdeaths, nottem and rock 
  are now visible in the 'datasets' package of R 2.0.0 and so have 
  been removed here.
- Script ch07.R now gives details using the gam() function in package gam as
  well as that in package mgcv.
- rlm's fitted component is now always unweighted.
- theta.{md,ml,mm} now have one help file with examples.
- polr() has a new method "cauchit" suggested by Roger Koenker.
  (Requires R >= 2.1.0)
- polr() now works with transformed intercepts, and usually converges
  better (contributed by David Firth).
- polr() handles a rank-deficient model matrix.
- polr() now returns the method used, and uses it for predictions.
- anova() method for polr (contributed by John Fox).
- predict.glmmPQL was not using the na.action in the object as intended.
- The default methods for addterm and dropterm and anova.polr now check
  for changes in the number of cases in use caused e.g. by na.action=na.omit.
- Added vcov() method for rlm fits.
- eqscplot() accepts reversed values for xlim and ylim.
- Script ch10.R uses se.contrast to calculate se's missing from model.tables.
- profile() and confint() methods for polr().
- glm.convert() was not setting the `offset' component that R's glm objects 
  have.
- sammon() now checks for duplicates in the initial configuration.
- isoMDS() and sammon() work around dropping of names.dist in 2.1.0
- lda() now gives an explicit error message if all group means are the same.
- fitdistr() now has a logLik() method, chooses the optim() method if not
  supplied, handles the log-normal by closed-form and no longer attempts to
  handle the uniform.
- glm.nb() now accepts 'mustart'.
- glm.nb() now supports weights: they used to be ignored when estimating 
  theta.
- fitdistr() now supports geometric and Poisson distributions, and 
  uses closed-form results for the exponential.
- lm.ridge allows offset() terms.