@@ -1,8 +1,8 @@
 Bundle: VR
 Priority: recommended
 Contains: MASS class nnet spatial
-Version: 7.2-19
-Date: 2005-08-26
+Version: 7.2-20
+Date: 2005-09-17
 Depends: R (>= 2.1.0), graphics, stats
 Suggests: lattice, nlme, survival
 Author: S original by Venables & Ripley.
@@ -13,4 +13,4 @@ BundleDescription: Functions and datasets to support Venables and
   Ripley, 'Modern Applied Statistics with S' (4th edition).
 License: GPL (version 2 or later)  See file LICENCE.
 URL: http://www.stats.ox.ac.uk/pub/MASS4/
-Packaged: Fri Aug 26 14:12:34 2005; ripley
+Packaged: Sat Sep 17 16:04:16 2005; ripley
